syntax = "proto3";
package titan.tokenfactory.v1beta1;

import "gogoproto/gogo.proto";
import "titan/tokenfactory/v1beta1/authority_metadata.proto";
import "titan/tokenfactory/v1beta1/params.proto";

option go_package = "github.com/titantkx/titan/x/tokenfactory/types";

// GenesisState defines the tokenfactory module's genesis state.
message GenesisState {
  // params defines the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false];

  repeated GenesisDenom factory_denoms = 2 [(gogoproto.nullable) = false];
}

// GenesisDenom defines a tokenfactory denom that is defined within genesis
// state. The structure contains DenomAuthorityMetadata which defines the
// denom's admin.
message GenesisDenom {
  option (gogoproto.equal) = true;

  string                 denom              = 1;
  DenomAuthorityMetadata authority_metadata = 2 [(gogoproto.nullable) = false];
}
